# music_notes_retriever

./: .gitignore  README.md  progress.md  pyproject.toml
.claude/skills/commit-push/: SKILL.md
.claude/skills/handoff/: SKILL.md
.claude/skills/verify/: SKILL.md
src/mnc/: audio_input.py  chords.py  cli.py  llm.py  lyrics.py  pipeline.py  score.py  structure.py  transcribe.py
src/mnc/web/: app.py
src/mnc/web/static/: app.js  index.html  style.css
tests/: make_test_audio.py  test_chords.py  test_e2e_surrender.py  test_tempo.py  test_units.py
