[project]
name = "music-notes-creator"
version = "0.1.0"
description = "Transcribe songs from audio/video files or YouTube into piano sheet music"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "basic-pitch>=0.4.0",
    "music21>=9.1",
    "yt-dlp>=2024.12.13",
    "imageio-ffmpeg>=0.5.1",
    "setuptools<81",  # resampy (via basic-pitch) still imports pkg_resources
    "librosa>=0.10",
    "numpy",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "python-multipart>=0.0.9",
    "faster-whisper>=1.0",
]

[project.optional-dependencies]
llm = [
    "anthropic",
    "openai",
]

[project.scripts]
mnc = "mnc.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mnc"]
